a little changes for ansible-galaxy

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
-- name: install zip
+- name: install unzip
   apt:
-    name: zip
+    name: unzip
     state: present
 
 - name: download awscli bundle installer
